--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 scraper = "0.22.0"
+
+[profile.release-lto]
+inherits = "release"
+lto = true
+strip = true
+panic = "abort"
