--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ axum = { version = "0.7", features = ["tokio", "http1"] }
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
-native_tls = { version = "0.2", features = ["vendored"] }
+native-tls = { version = "0.2", features = ["vendored"] }
 serde_json = "1.0"
 scraper = "0.22.0"
 
