--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,12 +35,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Build the binary for arm64
-        run: ~/.cargo/bin/cross build --release --target aarch64-unknown-linux-musl
+        run: ~/.cargo/bin/cross build --release --target aarch64-unknown-linux-musleabihf
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: binary-aarch64
-          path: target/aarch64-unknown-linux-musl/release/linux-release-fetcher
+          path: target/aarch64-unknown-linux-musleabihf/release/linux-release-fetcher
 
   build-armv7:
     runs-on: ubuntu-latest
@@ -65,3 +65,6 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
+      - name: Tree
+        shell: bash
+        run: tree
