--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,12 +18,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Build the binary for x86_64
-        run: ~/.cargo/bin/cross build --release --target x86_64-unknown-linux-musl
+        run: ~/.cargo/bin/cross build --profile release-lto --target x86_64-unknown-linux-musl
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: binary-x86_64
-          path: target/x86_64-unknown-linux-musl/release/linux-release-fetcher
+          path: target/x86_64-unknown-linux-musl/release-lto/linux-release-fetcher
 
   build-arm64:
     runs-on: ubuntu-latest
@@ -35,12 +35,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Build the binary for arm64
-        run: ~/.cargo/bin/cross build --release --target aarch64-unknown-linux-musleabihf
+        run: ~/.cargo/bin/cross build --profile release-lto --target aarch64-unknown-linux-musleabihf
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: binary-aarch64
-          path: target/aarch64-unknown-linux-musleabihf/release/linux-release-fetcher
+          path: target/aarch64-unknown-linux-musleabihf/release-lto/linux-release-fetcher
 
   build-armv7:
     runs-on: ubuntu-latest
@@ -52,12 +52,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       - name: Build the binary for armv7
-        run: ~/.cargo/bin/cross build --release --target armv7-unknown-linux-musl
+        run: ~/.cargo/bin/cross build --profile release-lto --target armv7-unknown-linux-musl
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: binary-armv7
-          path: target/armv7-unknown-linux-musl/release/linux-release-fetcher
+          path: target/armv7-unknown-linux-musl/release-lto/linux-release-fetcher
 
   build-image:
     runs-on: ubuntu-latest
