--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -63,21 +63,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build-x86_64, build-arm64, build-armv7]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Download artifacts
         uses: actions/download-artifact@v4
-      - name: Create Docker image
-        shell: bash
+      - name: Set executable permissions
         run: |
-          docker buildx create --use
-          docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7 -t darktohka/linux-release-fetcher:latest --push -f- . <<EOF
-          FROM scratch
-          COPY --platform=linux/amd64 binary-x86_64/linux-release-fetcher /linux-release-fetcher
-          COPY --platform=linux/arm64 binary-aarch64/linux-release-fetcher /linux-release-fetcher
-          COPY --platform=linux/arm/v7 binary-armv7/linux-release-fetcher /linux-release-fetcher
-          ENTRYPOINT ["/linux-release-fetcher"]
-          EOF
-      - name: Login to registry
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          chmod +x */linux-release-fetcher
       - name: Push the image
         run: |
-          docker push "${{ secrets.DOCKER_TAG }}:latest"
+          docker run -v $(pwd):/srv darktohka/ocitool --username "${{ secrets.DOCKER_USERNAME }}" --password "${{ secrets.DOCKER_PASSWORD }}"
